# JarvisForResearchers

./: .gitignore  404.html  README.md  config.yaml  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup_bot_service.sh  setup_cron.sh  sitemap.xml  tags.json  telegram_bot.py
.github/workflows/: publish.yml
assets/css/: blog-filter.css
assets/js/: blog-filter.js
digest/: index.html
digest/this-week-in-robotics--2026-week-17/: index.html
digest/this-week-in-robotics--2026-week-20/: index.html
digest/this-week-in-robotics--2026-week-21/: index.html
digest/this-week-in-robotics--2026-week-22/: index.html
digest/this-week-in-robotics--2026-week-23/: index.html
digest/this-week-in-robotics--2026-week-24/: index.html
digest/this-week-in-robotics--2026-week-25/: index.html
digest/this-week-in-robotics--2026-week-26/: index.html
digest/this-week-in-robotics--2026-week-27/: index.html
digest/this-week-in-robotics--2026-week-28/: index.html
docs/: index.md
docs/digest/: .authors.yml  index.md
docs/notes/: 2026-06-13-actuator-design.md  2026-06-13-thinking-methods-for-researchers.md  2026-06-13-to-use-thinking-methods-for-researchers.md  index.md
docs/posts/: .gitkeep  2026-05-01-action-to-action-flow-matching.md  (+85 more)
notes/: index.html
pipeline/: author.py  config.py  daily.py  diagram.py  digest.py  extract.py  figures.py  ingest.py  llm.py  notes.py  notify.py  publish.py  quality.py  resource_guard.py  run.py  vision.py
posts/: index.html
search/: search_index.json
tags/: index.html
web/: app.py
(+105 files in other folders)
