[project]
name = "jarvisforresearchers"
version = "0.1.0"
description = "LLM-powered robotics & AI research blogger using Gemma 4 locally"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv==2.1.0",
    "pymupdf==1.24.0",
    "transformers>=4.52.0",
    "torch>=2.2.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.27.0",
    "semanticscholar==0.8.4",
    "mkdocs-material==9.5.0",
    "pyyaml==6.0.1",
    "huggingface_hub>=0.22.0",
    "pillow>=10.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-telegram-bot[job-queue]>=20.0",
    "python-dotenv>=1.0",
]
